[package]
name = "btcpc-market"
version = "0.1.0"
edition = "2021"
description = "BTCPC Market — commerce HTTP service (stores, products, orders, reputation)"
authors = ["Shin Devlin <shindevlin@proton.me>"]

[[bin]]
name = "btcpc-market"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
once_cell = "1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
